# blog-with-drf

./: Makefile  README.md  dev.env  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  choices.py  forms.py  models.py  serializers.py  tests.py  urls.py  viewsets.py
apps/accounts/migrations/: 0001_initial.py
apps/blog/: filters.py  urls.py
apps/main/: admin.py  models.py
apps/utils/: admin.py  choices.py  climate.py  colors.py  email.py  errors.py  exceptions.py  export_to_excel.py  forms.py  managers.py  models.py  notifications.py  permissions.py  redis.py  serializers.py  shortcuts.py  sms.py  viewsets.py
docker/: Dockerfile
project/: settings.py  urls.py
